# iscore-addon-segments

./: CMakeLists.txt  iscore_addon_segments.cpp  iscore_addon_segments.hpp
Segments/: Visitor.hpp
